--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Tera web</title>                  <!--Change for your own title-->
+    <title>The Black Market</title>                  <!--Change for your own title-->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/typography.css">
     <link rel="stylesheet" href="css/lightbox.css">
@@ -16,7 +16,7 @@
     <header>
       <nav class="content">
         <h1>
-          <a href="index.html">Tera Art Gallery</a> <!--Change your own title for the banner-->
+          <a href="index.html">The Black Market</a> <!--Change your own title for the banner-->
         </h1>
         <ul>
           <li>
@@ -27,30 +27,30 @@
     </header>
 
     <article id="page" class="content">
-      <h2>My Gallery</h2>                <!--Change for your own title-->
+      <h2>The Black Market</h2>                <!--Change for your own title-->
       <p>
-      Write your texting here              <!--Write your texting-->
+      I'm bored. I'm really bored. If I could sell my boredom I'm confident I can make a decent living.              <!--Write your texting-->
       </p>
       
       <ul class="gallery">
         <li>
-          <a href= http://snap.berkeley.edu/snapsource/snap.html#present:Username=terafree&ProjectName=scrolling%20background> <!--Add your own link-->
-            <img src="img/game1.jpg">                 <!--Add your own small jpg-->
+          <a href= http://snap.berkeley.edu/snapsource/snap.html#present:Username=akash450&ProjectName=Guessing%20Game%20part%202> <!--Add your own link-->
+            <img src="img/GuessWhat.gif">                 <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a href="img/photos/photo-2-800x800.jpg"> <!--Add your own link-->
-            <img src="img/photo-2-200x200.jpg"> <!--Add your own small jpg-->
+          <a href= http://snap.berkeley.edu/snapsource/snap.html#present:Username=akash450&ProjectName=Guessing%20Game> <!--Add your own link-->
+            <img src="img/Explosion.gif"> <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a href="img/photos/photo-3-800x800.jpg"> <!--Add your own link-->
-            <img src="img/photo-3-200x200.jpg"> <!--Add your own small jpg-->
+          <a href= http://snap.berkeley.edu/snapsource/snap.html#present:Username=akash450&ProjectName=Platform%20Game> <!--Add your own link-->
+            <img src="img/Star-Wars.gif"> <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a href="img/photos/photo-4-800x800.jpg"> <!--Add your own link-->
-            <img src="img/photo-4-200x200.jpg"> <!--Add your own small jpg-->
+          <a href= http://snap.berkeley.edu/snapsource/snap.html#present:Username=akash450&ProjectName=zathura> <!--Add your own link-->
+            <img src="img/D.gif"> <!--Add your own small jpg-->
           </a>
         </li>
         
@@ -60,7 +60,7 @@
      <p> </p>
     <footer>
       <div class="content">
-        <p>Reflections of your work</p>      <!--Reflections about your games-->
+        <p>The games were at the begining a pain to make because I didnt know how to opperate the snap due to the fact that I hadnt used it much. However it got more fun because I was able to put my ideas in the games. This made it worth while to learn about snap. I was also able to make my games more fun due to the fact that I was also able to put music into the game.</p>      <!--Reflections about your games-->
       </div>
     </footer>
   </body>
